# torrentfs

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.config-test  ENVIRONMENT.md  README.md  mvp.md  test-config.sh  test-config.toml  test_all_torrents.sh
.agent_context/: issue_context.md
.github/workflows/: ci.yml  docker.yml  stability.yml  tests.yml
.multica/project/: resources.json
.opencode/skills/backend-dev-standards/: SKILL.md
.opencode/skills/branch-management/: SKILL.md
examples/: e2e_test.rs  torrent_info.rs
libtorrent-sys/: Cargo.toml  build.rs  wrapper.h
libtorrent-sys/src/cpp/: libtorrent_ffi.cpp  libtorrent_ffi.h
libtorrent-sys/wrapper/: libtorrent_wrapper.cpp  libtorrent_wrapper.h
scripts/: README.md  integration_test.sh  memory_leak_check.sh
src/: cache.rs  config.rs  db.rs  download.rs  error.rs  lib.rs  main.rs  mock_fs.rs  seeding.rs  torrent_info.rs
test_data/: multi_file.torrent  nested_dirs.torrent  test.torrent
tests/: config_test.rs  e2e_test.rs  integration_tests.rs  peer_download_test.rs  read_file_test.rs  rename_test.rs
tests/common/: mod.rs
torrentfs/: Cargo.toml
torrentfs-cli/: Cargo.toml
torrentfs-cli/src/: main.rs
torrentfs-fuse/: Cargo.toml
torrentfs-fuse/benches/: filesystem_bench.rs
torrentfs-fuse/src/: filesystem.rs  fuse_async.rs  lib.rs  main.rs  mount.rs
torrentfs-fuse/tests/: concurrent_test.rs  integration_test.rs  multi_torrent_test.rs  resource_monitor.rs  stability_test.rs
torrentfs-libtorrent/: Cargo.toml
torrentfs-libtorrent/src/: alert.rs  error.rs  lib.rs  session.rs  session_manager.rs  torrent.rs  validator.rs
torrentfs-libtorrent/tests/: session_manager_integration.rs
torrentfs/migrations/001_initial/: down.sql  up.sql
torrentfs/migrations/002_source_path/: down.sql  up.sql
torrentfs/migrations/002_unique_constraint_fix/: down.sql  up.sql
torrentfs/proptest-regressions/: runtime.txt
torrentfs/src/: alert_loop.rs  database.rs  download.rs  error.rs  lib.rs  metadata.rs  piece_cache.rs  repo.rs  resume_saver.rs  runtime.rs
