[workspace]
resolver = "2"
members = [
    "torrentfs",
    "torrentfs-fuse",
    "torrentfs-libtorrent",
]

[workspace.package]
version = "0.1.0"
authors = ["Multica Team"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = ""
description = "TorrentFS - A FUSE filesystem for BitTorrent"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.0", features = ["full"] }
fuser = "0.15"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
dirs = "5.0"
hex = "0.4"
percent-encoding = "2.3"
unicode-normalization = "0.1"
dashmap = "6.1.0"
notify = { version = "6.1", features = ["macos_fsevent"] }
proptest = "1.4"
