[package]
name = "torrentfs"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["libtorrent-sys"]

[dependencies]
libtorrent-sys = { path = "libtorrent-sys" }
fuser = "0.15"
libc = "0.2"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
tempfile = "3.10"
rusqlite = { version = "0.32", features = ["bundled"] }
hex = "0.4"

[dev-dependencies]
tempfile = "3.10"
sha1_smol = "1"
