[package]
name = "torrentfs-cli"
version = "0.1.0"
authors = ["Multica Team"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "CLI tool for parsing torrent metadata"
repository = ""
publish = false

[[bin]]
name = "torrentfs-cli"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
torrentfs-libtorrent = { path = "../torrentfs-libtorrent", version = "0.1.0" }

[dev-dependencies]
tokio.workspace = true