[package]
name = "torrentfs-fuse"
version = "0.1.0"
authors = ["Multica Team"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "FUSE filesystem implementation for TorrentFS"
repository = ""
publish = false

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
fuser.workspace = true
libc = "0.2"
clap.workspace = true
dirs.workspace = true
hex.workspace = true
percent-encoding = "2"
torrentfs = { path = "../torrentfs", version = "0.1.0" }
torrentfs-libtorrent = { path = "../torrentfs-libtorrent", version = "0.1.0" }

[dev-dependencies]
tokio.workspace = true
tempfile = "3.10"
serial_test = "3"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
rand = "0.8"