[package]
name = "torrentfs-libtorrent"
version = "0.1.0"
authors = ["Multica Team"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "libtorrent integration for TorrentFS"
repository = ""
publish = false

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
libtorrent-sys = { path = "../libtorrent-sys" }

[dev-dependencies]
tokio.workspace = true
tempfile = "3.10"